--- a/functions/views/fragments/footer.hbs
+++ b/functions/views/fragments/footer.hbs
@@ -2,6 +2,7 @@
 <script src="/js/popper.min.js" type="text/javascript"></script>
 <script src="/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/js/mdb.min.js" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 <script>
     $(".button-collapse").sideNav();
     var container = document.querySelector('.custom-scrollbar');
@@ -24,7 +25,7 @@
 
         $("#endpoints").append('<div class="card col-12 col-md-4 endpoint" id="endpoint' + next + '"><button class="btn btn-floating btn-action mdb-color btn-danger" type="button" onclick="removerEndpoint(' + next + ')"><i class="fas fa-times"></i></button><div class="card-body"><h4 class="card-title py-2" id="endpoint' + next + 'Title"><a></a></h4><div class="form-row"><div class="col"><div class="md-form"><label for="nomeEndpoint' + next + '">Nome</label><input class="form-control nomeEndpoint" id="nomeEndpoint' + next + '"name="endPoints[endpoint' + next + '][nomeEndpoint]" required type="text"></div></div></div><div class="form-row"><div class="col"><div class="md-form"><label for="descricaoEndpoint' + next + '">Descrição</label><input class="form-control" id="descricaoEndpoint' + next + '"name="endPoints[endpoint' + next + '][descricaoEndpoint]" type="text"></div></div></div><div class="form-row"><div class="col"><div class="md-form"><textarea class="md-textarea form-control" id="respostasEndpoint' + next + '"name="endPoints[endpoint' + next + '][respostasEndpoint]"rows="3"></textarea><label for="respostasEndpoint' + next + '">Respostas</label></div></div></div><div class="form-row"><div class="col"><div class="md-form"><textarea class="md-textarea form-control"id="dependenciasEndpoint' + next + '"name="endPoints[endpoint' + next + '][dependenciasEndpoint]"rows="3"></textarea><label for="dependenciasEndpoint' + next + '">Dependências</label></div></div></div></div></div>');
 
-    };
+    }
 
     function removerEndpoint(id) {
         $("#endpoint" + id).remove();
@@ -38,7 +39,7 @@
 
         $("#componentes").append('<div class="card col-md-4 componente" id="componente' + next + '"><button class="btn btn-floating btn-action mdb-color btn-danger" type="button" onclick="removerComponente(' + next + ')"><i class="fas fa-times"></i></button><div class="card-body"> <h4 class="card-title py-2" id="componente' + next + 'Title"><a></a></h4> <div class="form-row"> <div class="col"> <div class="md-form"> <label for="nomeComponente' + next + '">Nome</label> <input class="form-control" id="nomeComponente' + next + '" name="componentes[componente' + next + '][nomeComponente]" type="text"> </div></div></div><div class="form-row"> <div class="col"> <div class="md-form"> <textarea class="md-textarea form-control" id="atributosComponente' + next + '" name="componentes[componente' + next + '][atributosComponente]" rows="3"></textarea> <label for="atributosComponente' + next + '">Atributos</label> </div></div></div><div class="form-row"> <div class="col"> <div class="md-form"> <textarea class="md-textarea form-control" id="requeridosComponente' + next + '" name="componentes[componente' + next + '][requeridosComponente]" rows="3"></textarea> <label for="requeridosComponente' + next + '">Requeridos</label> </div></div></div></div></div>');
 
-    };
+    }
 
     function removerComponente(id) {
         $("#componente" + id).remove();
@@ -52,7 +53,7 @@
 
         $("#contatos").append('<div class="card col-md-4 componente" id="contato' + next + '"> <button class="btn btn-floating btn-action mdb-color btn-danger" type="button" onclick="removerContato(' + next + ')"><i class="fas fa-times"></i></button> <div class="card-body"> <h4 class="card-title py-2" id="contato' + next + 'Title"><a></a></h4> <div class="form-row"> <div class="col"> <div class="md-form"> <label for="nomeContato' + next + '">Nome *</label> <input class="form-control" id="nomeContato' + next + '" required name="contatos[contato' + next + '][nomeContato]" type="text"> </div></div></div><div class="form-row"> <div class="col"> <div class="md-form"> <label for="cargoContato' + next + '">Cargo *</label> <input class="form-control" id="cargoContato' + next + '" required name="contatos[contato' + next + '][cargoContato]" type="text"> </div></div></div><div class="form-row"> <div class="col"> <div class="md-form"> <label for="telefoneContato' + next + '">Telefone *</label> <input class="form-control" id="telefoneContato' + next + '" required name="contatos[contato' + next + '][telefoneContato]" type="text"> </div></div></div><div class="form-row"> <div class="col"> <div class="md-form"> <label for="turnoContato' + next + '">Turno *</label> <input class="form-control" id="turnoContato' + next + '" required name="contatos[contato' + next + '][turnoContato]" type="text"> </div></div></div><div class="form-row"> <div class="col"> <div class="md-form"> <textarea class="md-textarea form-control" id="horarioContato' + next + '" name="contatos[contato' + next + '][horarioContato]" required rows="3"></textarea> <label for="horarioContato' + next + '">Horário *</label> </div></div></div></div></div>');
 
-    };
+    }
 
     function removerContato(id) {
         $("#contato" + id).remove();
@@ -66,7 +67,7 @@
 
         $("#roteiros").append('<div class="card col-md-4 componente" id="roteiro' + next + '"> <button class="btn btn-floating btn-action mdb-color btn-danger" type="button" onclick="removerRoteiro(' + next + ')"><i class="fas fa-times"></i></button> <div class="card-body"> <h4 class="card-title py-2" id="contato' + next + 'Title"><a></a></h4> <div class="form-row"> <div class="col"> <div class="md-form"> <label for="nomeRoteiro' + next + '">Nome</label> <input class="form-control" id="nomeRoteiro' + next + '" name="roteiros[roteiro' + next + '][nomeRoteiro]" type="text"> </div></div></div><div class="form-row"> <div class="col"> <div class="md-form"> <textarea class="md-textarea form-control" id="descricaoRoteiro' + next + '" name="roteiros[roteiro' + next + '][descricaoRoteiro]" rows="3"></textarea> <label for="descricaoRoteiro' + next + '">Descrição</label> </div></div></div><div class="form-row"> <div class="col"> <div class="md-form"> <textarea class="md-textarea form-control" id="problemaRoteiro' + next + '" name="roteiros[roteiro' + next + '][problemaRoteiro]" rows="3"></textarea> <label for="problemaRoteiro' + next + '">Problema</label> </div></div></div><div class="form-row"> <div class="col"> <div class="md-form"> <textarea class="md-textarea form-control" id="solucaoRoteiro' + next + '" name="roteiros[roteiro' + next + '][solucaoRoteiro]" rows="3"></textarea> <label for="solucaoRoteiro' + next + '">Solução</label> </div></div></div><div class="form-row"> <div class="col"> <div class="md-form"> <label for="gravidadeRoteiro' + next + '">Gravidade</label> <input class="form-control" id="gravidadeRoteiro' + next + '" name="roteiros[roteiro' + next + '][gravidadeRoteiro]" type="text"> </div></div></div><div class="form-row"> <div class="col"> <div class="md-form"> <label for="responsavelRoteiro' + next + '">Responsável</label> <input class="form-control" id="responsavelRoteiro' + next + '" name="roteiros[roteiro' + next + '][responsavelRoteiro]" type="text"> </div></div></div></div></div>');
 
-    };
+    }
 
     function removerRoteiro(id) {
         $("#roteiro" + id).remove();
@@ -80,18 +81,13 @@
 
         $("#faqs").append('<div class="card col-md-4 componente" id="faq' + next + '"> <button class="btn btn-floating btn-action mdb-color btn-danger" type="button" onclick="removerFAQ(' + next + ')"><i class="fas fa-times"></i></button> <div class="card-body"> <h4 class="card-title py-2" id="faq' + next + 'Title"><a></a></h4> <div class="form-row"> <div class="col"> <div class="md-form"> <textarea class="md-textarea form-control" id="perguntaFAQ' + next + '" name="faqs[faq' + next + '][perguntaFAQ]" rows="3"></textarea> <label for="perguntaFAQ' + next + '">Pergunta</label> </div></div></div><div class="form-row"> <div class="col"> <div class="md-form"> <textarea class="md-textarea form-control" id="respostaFAQ' + next + '" name="faqs[faq' + next + '][respostaFAQ]" rows="3"></textarea> <label for="respostaFAQ' + next + '">Resposta</label> </div></div></div><div class="form-row"> <div class="col"> <div class="md-form"> <label for="nomeFAQ' + next + '">Autor</label> <input class="form-control" id="nomeFAQ' + next + '" name="faqs[faq' + next + '][nomeFAQ]" type="text"> </div></div></div></div></div>');
 
-    };
+    }
 
     function removerFAQ(id) {
         $("#faq" + id).remove();
     }
 
-    /*$(".nomeEndpoint").on('keyup', function () {
-        $(this).parents().find("h4").text($(this).val());
-    });*/
-
 </script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 <script>
     function excluir(id) {
         Swal.fire({
@@ -118,6 +114,37 @@
                         type: "error",
                         title: "Oops...",
                         html: "Não foi possível excluir este documento!",
+                    });
+                });
+            }
+        })
+    }
+
+    function excluirAtividade(idDocumentacao, id) {
+        Swal.fire({
+            title: 'Tem certeza?',
+            text: "Esta ação não poderá ser revertida!",
+            type: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Sim, apagar!',
+            cancelButtonText: 'Cancelar'
+        }).then((result) => {
+            if (result.value) {
+                $.post("/painel/documentacao/" + idDocumentacao + "/atividade/" + id + "/excluir", function (data) {
+                    Swal.fire({
+                        type: "success",
+                        title: "Sucesso!",
+                        html: "Atividade excluída com sucesso!",
+                    }).then((result) => {
+                        location.reload();
+                    });
+                }).fail(function () {
+                    Swal.fire({
+                        type: "error",
+                        title: "Oops...",
+                        html: "Não foi possível excluir esta atividade!",
                     });
                 });
             }
