--- a/functions/views/documentacao/documentacoes.hbs
+++ b/functions/views/documentacao/documentacoes.hbs
@@ -56,7 +56,7 @@
                                                    class="btn btn-floating btn-sm btn-primary p-0">
                                                     <i class="far fa-eye"></i>
                                                 </a>
-                                                <a href="/painel/documentacao/{{this.id}}"
+                                                <a href="/painel/documentacao/{{this.id}}/download"
                                                    class="btn btn-floating btn-sm btn-primary p-0">
                                                     <i class="fas fa-file-download"></i>
                                                 </a>
