--- a/functions/views/fragments/header.hbs
+++ b/functions/views/fragments/header.hbs
@@ -1,70 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-    <meta charset="utf-8"/>
+  <head>
+    <meta charset="utf-8" />
     <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
-    <title>MRS - Microservice Requirements Specifications</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>MservSpec - Microservice Requirements Specifications</title>
     <link
-            href="//use.fontawesome.com/releases/v5.7.0/css/all.css"
-            rel="stylesheet"
+      href="//use.fontawesome.com/releases/v5.7.0/css/all.css"
+      rel="stylesheet"
     />
-    <link href="/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="/css/mdb.min.css" rel="stylesheet"/>
-    <link href="/css/style.css" rel="stylesheet"/>
-</head>
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/mdb.min.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
+  </head>
 
-<body class="fixed-sn white-skin">
-<header>
-    <div id="slide-out" class="side-nav sn-bg-5 fixed">
+  <body class="fixed-sn white-skin">
+    <header>
+      <div id="slide-out" class="side-nav sn-bg-5 fixed">
         <ul class="custom-scrollbar">
-            <li class="logo-sn py-3">
-                <div class="text-center">
-                    <a href="#" class="pl-0"
-                    ><img src="/img/logo.png" class="img-fluid d-block mx-auto"/>
-                        <h2>MRS</h2>
-                    </a>
-                </div>
-            </li>
-            <li>
-                <ul class="collapsible collapsible-accordion">
-                    <li>
-                        <a
-                                href="/painel/documentacao"
-                                class="collapsible-header waves-effect"
-                        ><i class="w-fa fas fa-file-signature"></i>Nova
-                            Documentação</a
-                        >
-                    </li>
-                    <li>
-                        <a
-                                href="/painel/documentacoes"
-                                class="collapsible-header waves-effect"
-                        ><i class="w-fa far fa-file-alt"></i>Ver Documentações</a
-                        >
-                    </li>
-                </ul>
-            </li>
+          <li class="logo-sn py-3">
+            <div class="text-center">
+              <a href="#" class="pl-0"
+                ><img src="/img/logo.png" class="img-fluid d-block mx-auto" />
+                <h2>MservSpec</h2>
+              </a>
+            </div>
+          </li>
+          <li>
+            <ul class="collapsible collapsible-accordion">
+              <li>
+                <a
+                  href="/painel/documentacao"
+                  class="collapsible-header waves-effect"
+                  ><i class="w-fa fas fa-file-signature"></i>Nova
+                  Documentação</a
+                >
+              </li>
+              <li>
+                <a
+                  href="/painel/documentacoes"
+                  class="collapsible-header waves-effect"
+                  ><i class="w-fa far fa-file-alt"></i>Ver Documentações</a
+                >
+              </li>
+            </ul>
+          </li>
         </ul>
         <div class="sidenav-bg mask-strong"></div>
-    </div>
+      </div>
 
-    <nav
-            class="navbar fixed-top navbar-expand-lg scrolling-navbar double-nav"
-    >
+      <nav
+        class="navbar fixed-top navbar-expand-lg scrolling-navbar double-nav"
+      >
         <div class="float-left">
-            <a href="#" data-activates="slide-out" class="button-collapse"
+          <a href="#" data-activates="slide-out" class="button-collapse"
             ><i class="fas fa-bars"></i
-            ></a>
+          ></a>
         </div>
 
         <div class="breadcrumb-dn mr-auto">
-            <p>MRS - Microservice Requirements Specifications</p>
+          <p>MservSpec - Microservice Requirements Specifications</p>
         </div>
-    </nav>
-</header>
-</body>
+      </nav>
+    </header>
+  </body>
 </html>
